# viewBase

./: .gitignore  README.md  edges_controller.js  fetchWorker.js  global_controller.js  graph_server.py  label_controller.js  main.py  nodes_test.json  scene.js
.github/workflows/: release.yml
examples/: interactive.py  quickstart.py  quickstart2d.py  showcase.py  stress.py  words.py
examples/wireshark/: README.md  live_capture.py  live_route.py  make_sample_pcap.py  pcap_replay.py  test_live_route.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/tests/: base_window.test.js  base_window_dom.test.js  connection.test.js  control_window.test.js  detail.test.js  edges.test.js  flow.test.js  highlight.test.js  labels.test.js  physics.test.js  picking.test.js  (+7 more)
graph_server/: README.md  app.py  config.py
legacy/: README.md  computeWorker.js  index.html  style.css
python/: README.md  pyproject.toml
python/tests/: test_actions.py  test_canvas.py  test_close.py  test_control_windows.py  test_controls.py  test_controls_number_bool.py  test_deltas.py  test_ensure_and_read.py  test_events.py  test_every.py  test_flows.py  test_import_graph.py  test_protocol.py  test_quality.py  test_serve_handle.py  test_server.py  test_smoke.py  test_terminal.py  test_theme.py  test_window_flags.py
python/viewbase/: __init__.py  canvas.py  controls.py  protocol.py  server.py
python/viewbase/static/: index.html
python/viewbase/static/assets/: index-BTHRGnYi.js  index-BhJZEMaM.js  index-C2YmD2Kc.js  worker-CJ3O9S4R.js
(+44 files in other folders)
