[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viewbase"
version = "0.1.0"
description = "Živá 2D/3D force-graph vizualizace ovládaná z Pythonu"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["viewbase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
